@@ -2,6 +2,7 @@
 	- memleak on reading catalog at read content fixed
 	- some debug info disabled
 	- memleak at mediainfo fixed
+	- memleak at config class fixed
 
 09. Aug 2013 Christoph Thielecke <crissi99@gmx.de>
 	- initial russian translation added (thanks to Vitaly A. Kuzmin)
